--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,13 @@ server.error.include-stacktrace=never
 #logging.level.root=debug
 
 
-# IMPORTANT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-# Remove default value below before deployment
-app.secret-key=${TOKEN_SECRET:s/4KMb61LOrMYYAn4rfaQYSgr+le5SMrsMzKw8G6bXc=}
-
-#60*30 =1800  --> Token is valid for 30 minutes
-app.token-expiration = 1800 
-app.token-issuer=dat.kea
+## IMPORTANT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+## Remove default value below before deployment
+#app.secret-key=${TOKEN_SECRET:s/4KMb61LOrMYYAn4rfaQYSgr+le5SMrsMzKw8G6bXc=}
+#
+##60*30 =1800  --> Token is valid for 30 minutes
+#app.token-expiration = 1800
+#app.token-issuer=dat.kea
 
 
 #JDBC_DATABASE_URL=jdbc:mysql://pills.dk:3306/ITSM;JDBC_USERNAME=gruppe1;JDBC_PASSWORD=admin123!
